chore: Setup GitHub pages with Storybook

--- a/src/stories/DateSelector.mdx
+++ b/src/stories/DateSelector.mdx
@@ -3,6 +3,8 @@ import DateSelector from '../DateSelector.component';
 
 # DateSelector
 
+You can expand the `code` on the section below for a simple usage example. It uses `useState` to track the value you select, and your `onChange` method to control the state. You're never resetting the value, until you actually select a 'date'. The `value` is a [Luxon](https://moment.github.io/luxon/) `DateTime` object that you can then display or manipulate in anyway you like.
+
 <Canvas>
-  <Story id="dateselector--basic" />
+  <Story id="basics--basic" />
 </Canvas>
