chore: Update Intro in SB

--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -28,5 +28,6 @@ There's more to come. We'll fill you in as we progress
 
 ### TODO
 
+- [ ] ARIA attributes on different components
 - [ ] Min/Max Date Support
 - [ ] isDateDisabled Support
