--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -28,6 +28,10 @@ Because we're using [Luxon](https://moment.github.io/luxon/), under the hood, yo
 
 [Luxon](https://moment.github.io/luxon/) is made for modern browsers. If you require support in [IE you'll need polyfills](https://moment.github.io/luxon/docs/manual/install.html#internet-explorer), and still won't get full i18n. Best bet? Don't support IE. Help inform the world of it's evil. Even [Microsoft is giving up on it](https://techcommunity.microsoft.com/t5/microsoft-365-blog/microsoft-365-apps-say-farewell-to-internet-explorer-11-and/ba-p/1591666).
 
+## TODO List
+
+- [ ] Convert styling from SASS modules to [Emotion](https://emotion.sh/docs/introduction)
+
 ## WATCH THIS SPACE!!!
 
 I have a few other projects in the works that will utilize this component
