feat: Move all styling to Emotion and eliminate SASS modules

--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -4,7 +4,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 # DateSelector
 
-The `DateSelector` is a simple control for picking a date from a small calendar control. This can be embedded in your page, placed in a modal or popper control, whatever you like.
+The `DateSelector` is a simple React control for picking a date from a small calendar control. This can be embedded in your page, placed in a modal or popper control, whatever you like.
 
 ## Installation and Usage
 
@@ -30,7 +30,7 @@ Because we're using [Luxon](https://moment.github.io/luxon/), under the hood, yo
 
 ## TODO List
 
-- [ ] Convert styling from SASS modules to [Emotion](https://emotion.sh/docs/introduction)
+- [ ] Create ability for [Emotion](https://emotion.sh/docs/introduction) styling overrides
 
 ## WATCH THIS SPACE!!!
 
